force-app/main/default/objects/HAM_Strategy_Management__c/HAM_Strategy_Management__c.object-meta.xml
<CustomObject>
    <description>Connects a user or constituent to a strategy</description>
    <label>Strategy Management</label>
    <nameField>
        <label>Strategy Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>