force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Constituent__c.field-meta.xml
<CustomField>
    <fullName>HAM_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Strategy Managements</relationshipLabel>
    <relationshipName>Strategy_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>