force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>