force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Strategy__c.field-meta.xml
<CustomField>
    <fullName>HAM_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>ucinn_ascendv2__Strategy__c</referenceTo>
    <relationshipLabel>Strategy Managements</relationshipLabel>
    <relationshipName>Strategy_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>