force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Strategy_Constituent_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_Strategy_Constituent_Role__c</fullName>
    <label>Strategy Constituent Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>