force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Strategy_Management_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>HAM_Strategy_Management_Auto_Number__c</fullName>
    <displayFormat>STM-{0000000}</displayFormat>
    <label>Strategy Management Auto Number</label>
    <type>AutoNumber</type>
</CustomField>