force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_Strategy_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>HAM_Strategy_Team_Member_Role__c</fullName>
    <label>Strategy Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
                <isActive>false</isActive>
                <label>Primary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>