force-app/main/default/objects/HAM_Strategy_Management__c/fields/HAM_User__c.field-meta.xml
<CustomField>
    <fullName>HAM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategy_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>