force-app/main/default/objects/HAM_Strategy_Management__c/recordTypes/HAM_Constituent.recordType-meta.xml
<RecordType>
    <fullName>HAM_Constituent</fullName>
    <active>true</active>
    <description>Used to add Constituents to a Strategy</description>
    <label>Constituent</label>
</RecordType>