force-app/main/default/objects/HAM_Strategy_Management__c/recordTypes/HAM_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>HAM_Team_Member</fullName>
    <active>true</active>
    <description>Used to add Team Members to a Strategy</description>
    <label>Team Member</label>
</RecordType>